Finish Resume rmd

--- a/resume.html
+++ b/resume.html
@@ -364,7 +364,7 @@ Health</p>
 <li>Selected Courses: Data Science, Biostatistics Method, Principle of
 Epidemiology</li>
 </ul>
-<p><strong>University of California, San Diegor</strong></p>
+<p><strong>University of California, San Diego</strong></p>
 <p><em>Bachelor of Economics</em></p>
 <ul>
 <li>Selected Courses: Political Inquiry, Data Analytics,
@@ -391,17 +391,60 @@ and report generation</p></li>
 </ul>
 <p><strong>JD.com Inc.</strong></p>
 <p><em>Data Analyst Intern, JD Retail</em></p>
-<p>-Responsible for departmental data work, used SQL to extract sales,
-categories, users, channels, profit and loss, etc.</p>
-<p>-Used Easy BI to create dashboards, applied EXCEL and Tableau to
-analyze and present data results according to departmental business
-needs, and provided strategic recommendations</p>
-<p>-Implement NLP sentiment analysis using Python to analyze user
-reviews and find product pain points, and produce regular industry
-reports to output strategies for departmental category development</p>
 <ul>
-<li>Conducted 100+ customer callbacks, gathered opinions, and conducted
-satisfaction surveys. Supported team projects and daily tasks</li>
+<li><p>Responsible for departmental data work, used SQL to extract
+sales, categories, users, channels, profit and loss, etc.</p></li>
+<li><p>Used Easy BI to create dashboards, applied EXCEL and Tableau to
+analyze and present data results according to departmental business
+needs, and provided strategic recommendations</p></li>
+<li><p>Implement NLP sentiment analysis using Python to analyze user
+reviews and find product pain points, and produce regular industry
+reports to output strategies for departmental category
+development</p></li>
+<li><p>Conducted 100+ customer callbacks, gathered opinions, and
+conducted satisfaction surveys. Supported team projects and daily
+tasks</p></li>
+</ul>
+</div>
+<div id="research-experience" class="section level1">
+<h1>Research Experience</h1>
+<p><strong>Correlation analysis between education and healthy life
+expectancy </strong></p>
+<p><em>Undergraduate Researcher</em></p>
+<ul>
+<li><p>Identified certain correlates of educational attainment and
+health based on the use of inferential logic in the social sciences,
+quantitative analysis in the political sciences and public policy,
+including research design, data collection, data description and
+computer graphics, and statistical inference logic</p></li>
+<li><p>Analyzed the health status and longevity of people with unequal
+education, comparing median, mean, range and standard deviation using
+SPSS software for the data set</p></li>
+</ul>
+</div>
+<div id="extracurricular-activities" class="section level1">
+<h1>Extracurricular Activities</h1>
+<ul>
+<li>Volunteered at a Women’s Shelter in 2022.<br />
+</li>
+<li>Participated in the Mathematical Contest In Modeling (MCM) in
+2021</li>
+</ul>
+</div>
+<div id="skills" class="section level1">
+<h1>Skills</h1>
+<ul>
+<li><p>Computer skills: R, SPSS, Stata, Python, MySQL.</p></li>
+<li><p>Language: Chinese (Native), English (Proficient).</p></li>
+</ul>
+</div>
+<div id="contact-information" class="section level1">
+<h1>Contact Information</h1>
+<ul>
+<li>Mobile: (+1) (929)-695-7225</li>
+<li>Address: 50 Haven Ave, New York, NY 10032, USA</li>
+<li><a href="https://github.com/cl4469">Github</a></li>
+<li><a href="mailto:cl4469@cumc.columbia.edu">Email</a></li>
 </ul>
 </div>
 
