--- a/index.html
+++ b/index.html
@@ -364,6 +364,8 @@ you can find my academic and professional experience.</p>
 </div>
 <div id="problem-2" class="section level1">
 <h1>Problem 2</h1>
+<p>Here is the link to 3 distinct plots on Instacart:<a
+href="plotly.html">Dashboard</a></p>
 </div>
 
 
