creat a formula for plotly Rmd

--- a/plotly.html
+++ b/plotly.html
@@ -281,17 +281,18 @@ $(document).ready(function () {
 
 <div id="column" class="section level2" data-width="650">
 <h2>Column</h2>
-<div id="chart-a" class="section level3">
-<h3>Chart A</h3>
+<div id="plotly-boxplot-number-of-restaurants-by-borough-of-nyc"
+class="section level3">
+<h3>Plotly boxplot: Number of Restaurants by Borough of NYC</h3>
 </div>
 </div>
 <div id="column-1" class="section level2" data-width="350">
 <h2>Column</h2>
-<div id="chart-b" class="section level3">
-<h3>Chart B</h3>
+<div id="boxplot" class="section level3">
+<h3>Boxplot</h3>
 </div>
-<div id="chart-c" class="section level3">
-<h3>Chart C</h3>
+<div id="scatter-plot" class="section level3">
+<h3>Scatter Plot</h3>
 </div>
 </div>
 
