--- a/resume.html
+++ b/resume.html
@@ -422,8 +422,8 @@ education, comparing median, mean, range and standard deviation using
 SPSS software for the data set</p></li>
 </ul>
 </div>
-<div id="extracurricular-activities" class="section level1">
-<h1>Extracurricular Activities</h1>
+<div id="extracurricular-activitiesa" class="section level1">
+<h1>Extracurricular Activitiesa</h1>
 <ul>
 <li>Volunteered at a Women’s Shelter in 2022.<br />
 </li>
