--- a/index.html
+++ b/index.html
@@ -360,12 +360,12 @@ div.tocify {
 <p>My name is Chen Liang. I am first year MS biostatistics students at
 Columbia University Mailman School of Public Health. In this website,
 you can find my academic and professional experience.</p>
-<p>Here is my <a href="resume.html">Resume</a></p>
+<p>Here is my <a href="resume.html">Resume</a>.</p>
 </div>
 <div id="problem-2" class="section level1">
 <h1>Problem 2</h1>
-<p>Here is the link to 3 distinct plots on NYC Restaurant Inspections:<a
-href="plotly.html">Dashboard</a></p>
+<p>Here is the link to 3 distinct plots on NYC Restaurant Inspections:
+<a href="plotly.html">Dashboard</a>.</p>
 </div>
 
 
